# slide-transition-detector

./: .gitignore  README.md  pyproject.toml  roadmap.md
src/slidetd/: alignment.py  detector.py  eval.py  extractor.py  generator.py  imgcomparison.py  imgprocessor.py  levenshtein.py  main.py  mediaoutput.py  parser.py  sorter.py  sources.py  timeline.py
tests/: test_01_detector.py  test_02_sorter.py  test_03_extractor.py
